dnl Process this file with autoconf to produce a configure script.
AC_INIT(viewer.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_SEARCH_LIBS(floor, m)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF

AC_MSG_CHECKING(OS type)
AC_SUBST(OS_TYPE)
OS_TYPE=`uname -s | sed -e 's/ /_/g'`
AC_MSG_RESULT($OS_TYPE)

AC_MSG_CHECKING(machine architecture)
AC_SUBST(ARCH_TYPE)
ARCH_TYPE=`uname -m | sed -e 's/ /_/g'`
AC_MSG_RESULT($ARCH_TYPE)

CFLAGS=
LIBS=
LIBDIRS=
LDFLAGS=
INCDIRS=
EXTRALIBS=

AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(LIBS)
AC_SUBST(EXTRALIBS)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBDIRS)
AC_SUBST(INCDIRS)
AC_SUBST(INSTALL)

case "$OS_TYPE" in
  Linux|FreeBSD|OpenBSD|NetBSD)
    LIBS="-lglut -lGLU -lGL -lXi -lXmu -lXext -lXt -lX11 -lICE -lSM -lm"
    LDFLAGS="-O2"
    LIBDIRS="-L/usr/X11R6/lib"
    EXTRALIBS="-Xlinker -rpath /usr/X11R6/lib"
    INCDIRS="-I/usr/X11R6/include"
    CFLAGS="-Wall -O2"
    if test "$OS_TYPE" = "FreeBSD" ; then
      OS_TYPE="BSD"
    fi
    if test "$OS_TYPE" = "OpenBSD" ; then
      OS_TYPE="BSD"
    fi
    if test "$OS_TYPE" = "NetBSD" ; then
      OS_TYPE="BSD"
    fi
    ;;

  SunOS)
    LIBS="-lMesaglut -lMesaGLU  -lMesaGL -lXext -lXi -lXmu -lX11 -lsocket -lm"
    LIBDIRS="-L/soft/X11R6.3/lib"
    EXTRALIBS="-R/soft/X11R6.3/lib"
    INCDIRS="-I/soft/X11R6.3/include"
    CFLAGS="-xO5 -Dinline="
    ;;

  IRIX)
    LDFLAGS="-Ofast=ip22_4k -lglut -lGLU -lGL -lXmu -lX11 -lm"
    CFLAGS="-Ofast=ip22_4k -Dinline="
    ;;

  IRIX_gcc)
    LDFLAGS="-lglut -lGLU -lGL -lXmu -lX11 -lm"
    CFLAGS="-O2 -Dinline="
    ;;

  Darwin|DARWIN)
    OS_TYPE="Darwin"
    LIBS="-lobjc -lm"
    LDFLAGS="-O3"
    EXTRALIBS="-framework GLUT -framework OpenGL"
    INCDIRS="-I/System/Library/Frameworks/GLUT.framework/Headers -I/System/Library/Frameworks/OpenGL.framework/Headers"
    CFLAGS="-O3"
    ;;

  *)
    echo Unknown hardware you will probably have problems compiling viewer
    ;;

esac

AC_OUTPUT(Makefile)
