dnl Process this file with autoconf to produce a configure script.
AC_INIT(viewer, 0.7.4)
AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_SEARCH_LIBS(floor, m)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF

dnl create a --enable-debug configure flag to turn on debugging output
AC_ARG_ENABLE(debug,
[  --enable-debug          Turn on debugging output],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *)   AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG_ENABLE, test x$debug = xtrue)

CFLAGS=
LIBS=
LIBDIRS=
LDFLAGS=
INCDIRS=
EXTRALIBS=

case $host in
  *-*-linux*)
    LIBS="-lglut -lGLU -lGL -lXi -lXmu -lXext -lXt -lX11 -lICE -lSM -lm"
    LDFLAGS="-O2"
    LIBDIRS="-L/usr/X11R6/lib"
    EXTRALIBS="-Xlinker -rpath /usr/X11R6/lib"
    INCDIRS="-I/usr/X11R6/include"
    CFLAGS="-Wall -O2"
    OS_TYPE="Linux"
    ;;

  FreeBSD)
    LIBS="-lglut -lGLU -lGL -lXi -lXmu -lXext -lXt -lX11 -lICE -lSM -lm"
    LDFLAGS="-O2"
    LIBDIRS="-L/usr/X11R6/lib"
    EXTRALIBS="-Xlinker -rpath /usr/X11R6/lib"
    INCDIRS="-I/usr/X11R6/include"
    CFLAGS="-Wall -O2"
    OS_TYPE="BSD"
    ;;

  OpenBSD)
    LIBS="-lglut -lGLU -lGL -lXi -lXmu -lXext -lXt -lX11 -lICE -lSM -lm"
    LDFLAGS="-O2"
    LIBDIRS="-L/usr/X11R6/lib"
    EXTRALIBS="-Xlinker -rpath /usr/X11R6/lib"
    INCDIRS="-I/usr/X11R6/include"
    CFLAGS="-Wall -O2"
    OS_TYPE="BSD"
    ;;

  NetBSD)
    LIBS="-lglut -lGLU -lGL -lXi -lXmu -lXext -lXt -lX11 -lICE -lSM -lm"
    LDFLAGS="-O2"
    LIBDIRS="-L/usr/X11R6/lib"
    EXTRALIBS="-Xlinker -rpath /usr/X11R6/lib"
    INCDIRS="-I/usr/X11R6/include"
    CFLAGS="-Wall -O2"
    OS_TYPE="BSD"
    ;;

  SunOS)
    LIBS="-lMesaglut -lMesaGLU  -lMesaGL -lXext -lXi -lXmu -lX11 -lsocket -lm"
    LIBDIRS="-L/soft/X11R6.3/lib"
    EXTRALIBS="-R/soft/X11R6.3/lib"
    INCDIRS="-I/soft/X11R6.3/include"
    CFLAGS="-xO5 -Dinline="
    ;;

  IRIX)
    LDFLAGS="-Ofast=ip22_4k -lglut -lGLU -lGL -lXmu -lX11 -lm"
    CFLAGS="-Ofast=ip22_4k -Dinline="
    ;;

  IRIX_gcc)
    LDFLAGS="-lglut -lGLU -lGL -lXmu -lX11 -lm"
    CFLAGS="-O2 -Dinline="
    ;;

  *-*-darwin*)
    OS_TYPE="Darwin"
    LIBS="-lobjc -lm"
    LDFLAGS="-O3"
    EXTRALIBS="-framework GLUT -framework OpenGL"
    INCDIRS="-I/System/Library/Frameworks/GLUT.framework/Headers -I/System/Library/Frameworks/OpenGL.framework/Headers"
    CFLAGS="-O3"
    ;;

  *)
    echo Unknown hardware you will probably have problems compiling viewer
    ;;

esac

AC_SUBST(OS_TYPE)
AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(LIBS)
AC_SUBST(EXTRALIBS)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBDIRS)
AC_SUBST(INCDIRS)
AC_SUBST(INSTALL)

AC_OUTPUT(Makefile)
