dnl Process this file with autoconf to produce a configure script.
AC_INIT(viewer, 0.7.4)
AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_SEARCH_LIBS(floor, m)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF

dnl create a --enable-debug configure flag to turn on debugging output
AC_ARG_ENABLE(debug,
[  --enable-debug          Turn on debugging output],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *)   AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG_ENABLE, test x$debug = xtrue)

VIEWER_CFLAGS=
VIEWER_LIBS=
VIEWER_LIBDIRS=
VIEWER_LDFLAGS=
VIEWER_INCDIRS=
VIEWER_EXTRALIBS=

case $host in
  *-*-linux*)
    VIEWER_LIBS="-lglut -lGLU -lGL -lXi -lXmu -lXext -lXt -lX11 -lICE -lSM -lm"
    VIEWER_LDFLAGS="-O2"
    VIEWER_LIBDIRS="-L/usr/X11R6/lib"
    VIEWER_EXTRALIBS="-Xlinker -rpath /usr/X11R6/lib"
    VIEWER_INCDIRS="-I/usr/X11R6/include"
    VIEWER_CFLAGS="-Wall -O2"
    OS_TYPE="Linux"
    ;;

  *-*-freebsd*|*-*-openbsd*|*-*-netbsd*)
    VIEWER_LIBS="-lglut -lGLU -lGL -lXi -lXmu -lXext -lXt -lX11 -lICE -lSM -lm"
    VIEWER_LDFLAGS="-O2"
    VIEWER_LIBDIRS="-L/usr/X11R6/lib"
    VIEWER_EXTRALIBS="-Xlinker -rpath /usr/X11R6/lib"
    VIEWER_INCDIRS="-I/usr/X11R6/include"
    VIEWER_CFLAGS="-Wall -O2"
    OS_TYPE="BSD"
    ;;

  *-*-solaris*|*-*-sunos*)
    VIEWER_LIBS="-lMesaglut -lMesaGLU  -lMesaGL -lXext -lXi -lXmu -lX11 -lsocket -lm"
    VIEWER_LIBDIRS="-L/soft/X11R6.3/lib"
    VIEWER_EXTRALIBS="-R/soft/X11R6.3/lib"
    VIEWER_INCDIRS="-I/soft/X11R6.3/include"
    VIEWER_CFLAGS="-xO5 -Dinline="
    OS_TYPE="Solaris"
    ;;

  *-*-irix*)
    VIEWER_LDFLAGS="-Ofast=ip22_4k -lglut -lGLU -lGL -lXmu -lX11 -lm"
    VIEWER_CFLAGS="-Ofast=ip22_4k -Dinline="
    OS_TYPE="IRIX"
    ;;

  IRIX_gcc)
    VIEWER_LDFLAGS="-lglut -lGLU -lGL -lXmu -lX11 -lm"
    VIEWER_CFLAGS="-O2 -Dinline="
    OS_TYPE="IRIX"
    ;;

  *-*-darwin*)
    VIEWER_LIBS="-lobjc -lm"
    VIEWER_LDFLAGS="-O3"
    VIEWER_EXTRALIBS="-framework GLUT -framework OpenGL"
    VIEWER_INCDIRS="-I/System/Library/Frameworks/GLUT.framework/Headers -I/System/Library/Frameworks/OpenGL.framework/Headers"
    VIEWER_CFLAGS="-O3"
    OS_TYPE="Darwin"
    ;;

  *)
    echo Unknown hardware you will probably have problems compiling viewer
    ;;

esac

AC_SUBST(OS_TYPE)
AC_SUBST(VIEWER_CFLAGS)
AC_SUBST(VIEWER_LIBS)
AC_SUBST(VIEWER_EXTRALIBS)
AC_SUBST(VIEWER_LDFLAGS)
AC_SUBST(VIEWER_LIBDIRS)
AC_SUBST(VIEWER_INCDIRS)
dnl AC_SUBST(INSTALL)

AC_OUTPUT(Makefile)
